Fixed layout issues

--- a/react-version/src/App.css
+++ b/react-version/src/App.css
@@ -10,7 +10,6 @@ body {
 
 .app {
   position: relative;
-  padding: 0 10px;
 }
 
 .module-list-container {
@@ -90,10 +89,18 @@ button {
   padding: 10px;
 }
 
+.module-practice-screen {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+}
+
 .module-practice-container {
   position: relative;
-  margin: auto;
-  max-width: 600px;
+  width: 600px;
+  padding: 0 10px;
 }
 
 .module-practice-link-container {
@@ -254,7 +261,7 @@ button:focus { outline:0; }
   position: absolute;
   display: flex;
   top: 0;
-  right: 0;
+  right: 10px;
   height: 30px;
   width: 30px;
   color: white;
@@ -293,7 +300,7 @@ footer {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding: 0 10px;
+  padding: 30px 10px 0 10px;
   margin-bottom: 20px;
 }
 
